juno/qa/apps/docs/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    fluxcd.io/automated: 'true'
    fluxcd.io/tag.keycloak: 'semver:~1'
  labels:
    app: docs
  name: docs
spec:
  replicas: 2
  selector:
    matchLabels:
      app: docs
  template:
    metadata:
      labels:
        app: docs
    spec:
      containers:
      - image: index.docker.io/ferlabcrsj/cqdg-docs:141ed530a3197e88284784f1162caa8a329030f5-1714503818 # {"$imagepolicy": "cqdg-qa-fluxcd:docs"}
        name: docs
        resources:
          requests:
            memory: "256Mi"
            cpu: '0.25'
          limits:
            memory: "512Mi"
            cpu: '0.5'
