juno/qa/apps/docs/services.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: docs
  name: docs
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: docs
