juno/qa/apps/docs/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docs-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - dict.qa.juno.cqdg.ferlab.bio
      - docs.qa.juno.cqdg.ferlab.bio
      secretName: cqdg-ingress-certificate
  rules:
    - host: dict.qa.juno.cqdg.ferlab.bio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docs
                port:
                  number: 8080
    - host: docs.qa.juno.cqdg.ferlab.bio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docs
                port:
                  number: 8080
